--- a/app/views/runs/_run.html.erb
+++ b/app/views/runs/_run.html.erb
@@ -5,112 +5,110 @@
 
 <div class="flex flex-col gap-1.5">
   <div class="card">
-    <div class="flex items-start gap-2 mb-4">
-      <%= link_to team ? team_member_path(team, run_user) : user_path(run_user), data: { turbo: false }, class: 'group flex items-center gap-3 flex-grow' do %>
-        <%= render 'shared/user_photo', user: run_user, size: :xs, icon_background: :darker %>
-        <div>
-          <p>
-            <span class="font-bold transition duration-200 ease-in-out group-hover:text-indigo-500 mr-0.5"><%= run_user.default_name %></span>
-            <%= content_tag(:span, run_user.username, class: 'text-soft text-xs font-normal') if run_user.display_name? %>
-          </p>
-          <p class="text-xs text-soft"><%= pretty_date(run.date, include_weekday: true, month_format: :long, include_year: run.date.year != Date.current.year) %></p>
+    <div class="mb-4">
+      <div class="flex flex-wrap items-start justify-between gap-2">
+        <%= link_to team ? team_member_path(team, run_user) : user_path(run_user), data: { turbo: false }, class: 'group flex items-center gap-3 flex-grow' do %>
+          <div class="shrink-0">
+            <%= render 'shared/user_photo', user: run_user, size: :xs, icon_background: :darker %>
+          </div>
+
+          <div>
+            <p class="font-bold leading-tight transition duration-200 ease-in-out group-hover:text-indigo-500"><%= run_user.default_name %></p>
+            <p class="text-xs text-soft leading-tight transition duration-200 ease-in-out group-hover:text-indigo-500"><%= run_user.username %></p>
+          </div>
+        <% end %>
+
+        <div class="text-soft text-xs font-semibold inline-flex items-center gap-1">
+          <%= inline_svg_tag 'icons/calendar-filled.svg', class: 'size-3.5 shrink-0' %>
+          <span class="whitespace-nowrap"><%= pretty_date(run.date, date_style: :absolute, include_weekday: true, weekday_format: :short, month_format: :short, include_year: run.date.year != Date.current.year) %></span>
         </div>
-      <% end %>
+      </div>
     </div>
 
     <%= run_content_wrapper(run, team, local_assigns[:turbo_frame]) do %>
-      <% if run.duration? %>
-        <div class="flex items-center justify-around mt-8">
-          <div class="flex flex-col items-center">
-            <%= inline_svg_tag 'icons/ruler.svg', class: 'size-10 text-muted shrink-0 mb-1 transition duration-200 ease-in-out group-hover:text-indigo-500' %>
-            <p class="font-bold transition duration-200 ease-in-out group-hover:text-indigo-500">
-              <span class="text-xl"><%= run.distance %></span>
-              <span class="text-base">mi</span>
-            </p>
-            <p class="text-soft transition duration-200 ease-in-out group-hover:text-indigo-500 text-xs">Distance</p>
-          </div>
+      <div class="flex flex-wrap items-center gap-2 mt-4">
+        <% stats = [
+          { attr: 'distance', value: run.distance, icon: 'ruler' },
+          { attr: 'duration', value: run.duration, icon: 'clock' },
+        ] %>
 
-          <div class="flex flex-col items-center">
-            <%= inline_svg_tag 'icons/clock.svg', class: 'size-10 text-muted shrink-0 mb-1 transition duration-200 ease-in-out group-hover:text-indigo-500' %>
-            <p class="font-bold transition duration-200 ease-in-out group-hover:text-indigo-500">
-              <span class="text-xl"><%= clock_time_display(run.duration) %></span>
-              <span class="text-base"></span>
-            </p>
-            <p class="text-soft transition duration-200 ease-in-out group-hover:text-indigo-500 text-xs">Time</p>
-          </div>
+        <% stats.append({ attr: 'pace', value: run.pace, icon: 'speedometer' }) if run.duration? %>
 
-          <div class="flex flex-col items-center">
-            <%= inline_svg_tag 'icons/speedometer.svg', class: 'size-10 text-muted shrink-0 mb-1 transition duration-200 ease-in-out group-hover:text-indigo-500' %>
-            <p class="font-bold transition duration-200 ease-in-out group-hover:text-indigo-500">
-              <span class="text-xl"><%= clock_time_display(run.pace) %> /</span><span class="text-base">mi</span>
-            </p>
-            <p class="text-soft transition duration-200 ease-in-out group-hover:text-indigo-500 text-xs">Pace</p>
+        <% stats.reject { |stat| stat[:value].nil? }.each do |stat| %>
+          <div class="bg-slate-200/75 dark:bg-slate-700/50 pl-2.5 pr-3 py-1 rounded-md flex items-center gap-2">
+            <%= inline_svg_tag "icons/#{stat[:icon]}.svg", class: 'size-4 shrink-0 text-soft' %>
+            <span class="text-normal font-bold whitespace-nowrap">
+              <% if stat[:attr] == 'distance' %>
+                <%= stat[:value] %>
+                <span class="text-sm text-soft font-normal">mi</span>
+              <% elsif stat[:attr] == 'duration' %>
+                <%= clock_time_display stat[:value] %>
+              <% elsif stat[:attr] == 'pace' %>
+                <%= clock_time_display stat[:value] %>
+                <span class="text-sm text-soft font-normal">/mi</span>
+              <% end %>
+            </span>
           </div>
-        </div>
-      <% else %>
-        <div class="flex items-center gap-2 sm:gap-3 mt-4">
-          <%= inline_svg_tag 'icons/ruler.svg', class: 'size-5.5 text-soft shrink-0 transition duration-200 ease-in-out group-hover:text-indigo-500' %>
-          <div class="flex items-end gap-2">
-            <p class="text-soft transition duration-200 ease-in-out group-hover:text-indigo-500">Distance:</p>
-            <p class="font-bold transition duration-200 ease-in-out group-hover:text-indigo-500">
-              <span class="text-xl"><%= run.distance %></span>
-              <span class="text-base">mi</span>
-            </p>
-          </div>
+        <% end %>
+      </div>
+
+      <% streak = run.streak_value(team) %>
+      <% long_run_badge_check = run.long_run_for_team?(team) %>
+      <% streak_badge_check = !streak.nil? && !streak.zero? && !streak.negative? && !(streak == 1) %>
+
+      <% if streak_badge_check || long_run_badge_check %>
+        <div class="flex flex-wrap items-center gap-2 mt-2">
+          <%= render 'runs/long_run_badge' if long_run_badge_check %>
+          <%= render 'runs/streak_badge', streak: streak if streak_badge_check %>
         </div>
       <% end %>
 
       <% if run.notes? %>
         <% sanitized_notes = sanitize(run.notes, tags: %w(strong em b i p br)) %>
 
-        <div class="flex items-start gap-2 sm:gap-3 mt-6">
-          <%= inline_svg_tag 'icons/comment.svg', class: 'size-5.5 text-soft shrink-0 mt-0.5' %>
-          <div class="text-light text-sm space-y-1.5">
-            <%= simple_format(
-              if current_page?(run) || local_assigns[:turbo_frame]
-                sanitized_notes
-              else
-                truncate(sanitized_notes, length: 80, separator: ' ', omission: '') { content_tag(:span, '... (see more)', class: 'text-muted') }
-              end
-            ) %>
-          </div>
+        <div class="text-light text-sm space-y-1.5 mt-4">
+          <%= simple_format(
+            if current_page?(run) || local_assigns[:turbo_frame]
+              sanitized_notes
+            else
+              truncate(sanitized_notes, length: 80, separator: ' ', omission: '') { content_tag(:span, '... (see more)', class: 'text-muted') }
+            end
+          ) %>
         </div>
       <% end %>
+    <% end %>
 
+    <div class="max-lg:space-y-2 lg:flex items-center justify-between pt-4 mt-4 border-t dark:border-slate-700">
       <% if details_view %>
-        <div class="max-lg:space-y-2 lg:flex items-center justify-between pt-4 mt-4 border-t dark:border-slate-700">
-          <div class="flex items-center gap-3 text-soft text-xs">
+        <div class="sm:flex items-center gap-3 text-soft text-xs">
+          <span class="flex items-center gap-1.5">
+            <span class="font-semibold text-blue-500">Posted</span>
+            <%= pretty_datetime(run.created_at, date_style: :absolute, include_seconds: false, month_format: :short) %>
+          </span>
+
+          <% if run.edited? %>
+            <span class="max-sm:hidden bg-slate-500 rounded-full size-0.5 shrink-0"></span>
+
             <span class="flex items-center gap-1.5">
-              <span class="font-semibold text-blue-500">Posted</span>
-              <%= pretty_datetime(run.created_at, date_style: :absolute, include_seconds: false, month_format: :short) %>
+              <span class="font-semibold text-orange-500">Edited</span>
+              <%= pretty_datetime(run.updated_at, date_style: :absolute, include_seconds: false, month_format: :short) %>
             </span>
-
-            <% if run.edited? %>
-              <span class="bg-slate-500 rounded-full size-0.5 shrink-0"></span>
-
-              <span class="flex items-center gap-1.5">
-                <%= inline_svg_tag 'icons/edit-filled.svg', class: 'size-3.5 -mr-0.5 text-orange-500' %>
-                <span class="font-semibold text-orange-500">Edited</span>
-                <%= pretty_datetime(run.updated_at, date_style: :absolute, include_seconds: false, month_format: :short) %>
-              </span>
-            <% end %>
-          </div>
-
-          <% streak = run.streak_value(team) %>
-          <div class="flex flex-wrap items-center gap-2">
-            <%= render 'runs/long_run_badge' if run.long_run_for_team?(team) %>
-            <%= render 'runs/streak_badge', streak: streak unless streak.nil? || streak.zero? || streak.negative? || streak == 1 %>
-          </div>
+          <% end %>
         </div>
       <% end %>
-    <% end %>
 
-    <% if run.strava_url? %>
-      <div class="mt-4 text-[#fc5200] flex items-center gap-1.5">
-        <%= link_to 'View on Strava', run.strava_url, target: :_blank, class: 'cursor-pointer font-semibold hover:underline focus:ring-transparent text-xs' %>
-        <%= inline_svg_tag 'icons/external-link-filled.svg', class: 'size-3 shrink-0' %>
-      </div>
-    <% end %>
+      <% if run.strava_url? %>
+        <div class="text-[#fc5200] flex items-center gap-1.5">
+          <%= link_to 'View on Strava', run.strava_url, target: :_blank, class: 'cursor-pointer font-semibold hover:underline focus:ring-transparent text-xs' %>
+          <%= inline_svg_tag 'icons/external-link-filled.svg', class: 'size-3 shrink-0' %>
+        </div>
+      <% else %>
+        <div class="text-[#fc5200] flex items-center gap-1.5">
+          <%= link_to 'View on Strava', run&.strava_url, target: :_blank, class: 'cursor-pointer font-semibold hover:underline focus:ring-transparent text-xs' %>
+          <%= inline_svg_tag 'icons/external-link-filled.svg', class: 'size-3 shrink-0' %>
+        </div>
+      <% end %>
+    </div>
   </div>
 
   <%= render 'runs/actions', run: run %>
