--- a/app/views/shared/_user_record_streak_card.html.erb
+++ b/app/views/shared/_user_record_streak_card.html.erb
@@ -1,6 +1,6 @@
 <% team ||= nil %>
 <% unless local_assigns[:streak] && local_assigns[:start_date] && local_assigns[:end_date] %>
-  <% streak_data = current_user.record_streak(team) %>
+  <% streak_data = user.record_streak(team) %>
   <% streak = streak_data[:streak] %>
   <% start_date = streak_data[:start_date] %>
   <% end_date = streak_data[:end_date] %>
@@ -12,13 +12,13 @@
     <%= streak %>
     <span class="text-base font-normal text-soft"><%= 'day'.pluralize(streak) %></span>
   </p>
-  <p class="mt-1 mb-4 text-soft">
+  <p class="mt-1 mb-4 text-soft text-sm">
     <% if streak.zero? %>
       No record streak recorded.
     <% elsif start_date == end_date %>
-      <%= pretty_date(start_date, date_style: :relative) %>
+      <%= pretty_date(start_date, month_format: :short, include_year: Date.current.year != start_date.year) %>
     <% else %>
-      <%= pretty_date(start_date, date_style: :relative) %> &ndash; <%= pretty_date(end_date, date_style: :relative) %>
+      <%= pretty_date(start_date, month_format: :short, include_year: Date.current.year != start_date.year) %> &ndash; <%= pretty_date(end_date, month_format: :short, include_year: Date.current.year != end_date.year) %>
     <% end %>
   </p>
 
@@ -30,4 +30,14 @@
       </div>
     </div>
   </div>
+
+  <% if end_date == Date.today || end_date == Date.yesterday %>
+    <p class="mt-1 text-soft text-sm">
+      <% if end_date == Date.today %>
+        Run again tomorrow to extend your record streak!
+      <% else %>
+        Log a run to extend your record streak!
+      <% end %>
+    </p>
+  <% end %>
 </div>
