--- a/app/views/messages/index.html.erb
+++ b/app/views/messages/index.html.erb
@@ -4,7 +4,7 @@
 
 <div data-controller="reply-message" class="max-w-3xl mx-auto mt-16 mb-80 md:mb-16">
   <div class="mb-6 border-b border-slate-200 dark:border-slate-700 sticky top-0 bg-slate-50 dark:bg-slate-900 z-20">
-    <div class="flex items-center justify-between">
+    <div class="flex items-center justify-between gap-2">
       <%= link_to team_topics_path(@team), class: 'group flex items-center gap-4 pt-4 pb-2 pr-2 btn-link-soft w-max', aria: { label: "Back to #{@team.name} topics" } do %>
         <%= inline_svg_tag 'icons/chevron-left-bold.svg', class: 'size-4 transition ease-in-out duration-200' %>
         <div>
@@ -12,10 +12,14 @@
           <p class="text-xs transition ease-in-out duration-200">Back to topics</p>
         </div>
       <% end %>
-      <button type="button" onclick="window.location.reload()" class="p-[5px] rounded-lg transition-colors duration-200 focus-visible:outline-none focus-visible:ring-2 focus-visible:ring-offset-2 hover:bg-slate-200/50 dark:hover:bg-slate-700/50">
+      <button type="button" onclick="window.location.reload()" class=" ml-auto p-[5px] rounded-lg transition-colors duration-200 focus-visible:outline-none focus-visible:ring-2 focus-visible:ring-offset-2 hover:bg-slate-200/50 dark:hover:bg-slate-700/50">
         <%= inline_svg_tag 'icons/reload.svg', class: 'size-4' %>
         <span class="sr-only">Refresh page</span>
       </button>
+      <%= link_to team_topic_path(@team, @topic), data: { turbo: false }, class: 'p-[5px] rounded-lg transition-colors duration-200 focus-visible:outline-none focus-visible:ring-2 focus-visible:ring-offset-2 hover:bg-slate-200/50 dark:hover:bg-slate-700/50' do %>
+        <%= inline_svg_tag 'icons/info.svg', class: 'size-4' %>
+        <span class="sr-only">View topic details</span>
+      <% end %>
     </div>
 
     <%= render 'pinned_message', message: @pinned_message if @pinned_message %>
