--- a/app/views/comments/show.html.erb
+++ b/app/views/comments/show.html.erb
@@ -72,7 +72,7 @@
               <%= render 'shared/user_photo', user:, size: :thumb, icon_background: :darker %>
               <div>
                 <% if user == current_user %>
-                  <span class="font-semibold text-sm">You</span>
+                  <span class="font-semibold text-sm leading-tight">You</span>
                   <% if is_self_like %>
                     <% messages = [
                       { text: "I see you’ve treated yourself to a like! Self-love is the best love, isn’t it?", icon: 'heart-filled', icon_color: 'text-pink-500' },
@@ -85,7 +85,7 @@
                     ] %>
 
                     <% selected_message = messages.sample %>
-                    <p class="text-xs text-soft">
+                    <p class="text-xs text-soft leading-tight">
                       <span><%= raw selected_message[:text] %></span>
                       <%= inline_svg_tag "icons/#{selected_message[:icon]}.svg", class: "inline mb-px ml-1.5 size-3 #{selected_message[:icon_color]}" if selected_message[:icon] %>
                     </p>
@@ -98,7 +98,7 @@
             <span class="text-soft text-xs inline-flex items-center gap-1.5">
               <%= inline_svg_tag 'icons/heart-filled.svg', class: 'size-3 text-pink-500' %>
               <span class="font-semibold text-pink-500">Liked</span>
-              <%= pretty_datetime(like.created_at, date_style: :absolute, include_seconds: false, month_format: :short) %>
+              <%= pretty_datetime(like.created_at, date_style: :absolute, include_seconds: false, month_format: :short, include_year: like.created_at.year != Date.current.year) %>
             </span>
           </div>
         <% end %>
